--- a/style.css
+++ b/style.css
@@ -1,16 +1,21 @@
 @charset "UTF-8";
 /* Палитра цветов */
 .header {
-  background-color: #333333;
   color: #ffffff;
   width: 100%;
   z-index: 1000;
 }
 .header .header__container {
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(4px);
+  width: 80%;
+  max-width: 1089px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5rem 1rem;
+  padding: 8px;
+  border-radius: 48px;
+  margin-top: 24px;
 }
 .header__left {
   display: flex;
@@ -21,23 +26,53 @@
   align-items: center;
 }
 .header__logo img {
-  max-height: 40px;
+  max-height: 64px;
 }
 .header__nav {
-  margin-left: 1rem;
+  margin-left: 48px;
+  display: flex;
+  align-items: baseline;
 }
 .header__nav ul.header__menu {
   display: flex;
   margin: 0;
   padding: 0;
   list-style: none;
+  margin-right: 48px;
 }
 .header__menu-item {
-  margin: 0 0.5rem;
+  margin: 0;
+}
+.header__menu-item:nth-child(2) {
+  position: relative;
+  margin: 0 16px;
+  padding: 0rem 16px;
+}
+.header__menu-item:nth-child(2)::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 12px;
+  width: 1px;
+  background: rgba(255, 255, 255, 0.4);
+}
+.header__menu-item:nth-child(2)::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 12px;
+  width: 1px;
+  background: rgba(255, 255, 255, 0.4);
 }
 .header__menu-item a {
-  color: #ffffff;
   text-decoration: none;
+  font-size: 14px;
+  line-height: 100%;
+  color: #fff;
 }
 .header__search {
   display: flex;
